<resources>
    <string name="app_name">MotorTest-马达测试</string>
    <string name="advanced_toast_notSupportVibrator">当前设备不支持！</string>
    <string name="advanced_toast_systemCustomize_notSupportVlue">非法数值！</string>
    <string name="advanced_text_predefined">系统预设：</string>
    <string name="advanced_edit_system_customize">请输入任意整数</string>
    <string name="advanced_edit_systemCustomize_clr_description">清除</string>
    <string name="advanced_btn_system_customize_start">启动</string>
    <string name="advanced_text_click">单击</string>
    <string name="advanced_text_doubleClick">双击</string>
    <string name="advanced_text_heavyClick">重击</string>
    <string name="advanced_text_tick">轻击</string>
    <string name="advanced_text_predefined_notSupport">系统预设（需要安卓10及以上）</string>
    <string name="advanced_text_free_test">连续测试：</string>
    <string name="advanced_text_amplitud">振动强度（振幅）：</string>
    <string name="advanced_text_notSupport_amplitude">设置振动强度：当前设备不支持此选项</string>
    <string name="advanced_menu_high_accuracy">使用高精度</string>
    <string name="advanced_text_pro">100</string>
    <string name="advanced_text_rate">振动频率：</string>
    <string name="advanced_btn_free_start">启动</string>
    <string name="advanced_btn_free_stop">停止</string>
    <string name="advanced_text_app_predefined">程序预设：</string>
    <string name="advanced_btn_pre_start">启动</string>
    <string name="advanced_btn_pre_stop">停止</string>
    <string name="advanced_edit_diy_timings">timings（时序）</string>
    <string name="advanced_edit_diy_amplitudes">amplitudes（振幅）</string>
    <string name="advanced_edit_diy_repeat">repeat（重复）</string>
    <string name="advanced_btn_diy_start">启动</string>
    <string name="advanced_btn_diy_stop">停止</string>
    <string name="advanced_text_diy">自由创作：</string>
    <string name="advanced_dialog_help_content_summary">
        <![CDATA[
        <h3>简介</h3>
        本应用可以实现对安卓智能手机的振动马达进行测试的需求。总共分为4组测试方法。<br />
        <h3>手机马达检查</h3>
        <a href="https://www.bilibili.com/video/av93475790">教程</a>来自b站up主：胜利文绉绉 ，原教程在视频 5:22 开始。<br />
        在连续测试中将振动强度调至最高，振动频率调至最低，开启振动。<br />
        将手机以不同的角度（侧面、正面等）对着耳朵，仔细听，那边声音最大即表示马达在那边。<br />
        同时，由于不同的马达具有不同振动方式，如果你能明显感觉到侧面的声音相比于正面更大，能量感更强，则一般为X轴线性马达，反之则为Z轴线性马达。<br />
        另一种判断方式。<br />
        同上述步骤开启振动后，将手机侧面略微与桌面接触。如果能听到手机敲击桌子的声音，即为X轴线性马达；若无太大反应，则为Z轴线性马达。而对于Z轴线性马达，需要平放才会有敲击桌子的声音。<br />
        <h3>测试方法简介</h3>
        <h4>系统预设</h4>
        在该组测试中，将会以安卓系统已经调教好的四种振动模式振动，是最基础的振动测试。需要注意的是，该组只支持安卓10以上设备。
        1.32以上版本支持自定义预设效果，对于不同品牌的手机可能会有不同的系统预设效果，需要自行输入数字尝试。根据 @紫红小番薯 使用小米10pro测试，数值 20 以后是一些“音乐”，43是 MIUI 的默认来电振动效果<br />
        <h4>程序预设</h4>
        在该组测试中，将会以本人调教好的多种振动模式进行测试，且振动模式还在不断增加中。<br />
        <h4>连续测试</h4>
        在该组测试，你可以自行指定振动强度和振动频率进行连续测试。<br />
        <h4>自由创作</h4>
        在该组测试中，你可以完完全全自定义振动，我已经把谷歌开放出来的所有能够控制振动的参数都贴出来了，欢迎各位大佬使用，使用说明请移步“用法”查看。<br />
        ps：欢迎各位大佬使用自由创作调试后提交你的调教方案给我们,我们会在下次更新时加入至程序预设中。
        ]]>
        </string>
    <string name="advanced_dialog_help_content_usage">
        <![CDATA[
        <h1>自由创作：</h1>
        自由创作可以指定三个值：<b>timings</b>、<b>amplitudes</b>、<b>repeat</b>。<br />
        <h3>timings（时序）：</h3>表示时序与振幅组合中的持续时间，只能为大于等于0的整数，为0时将被忽略，单位毫秒,使用英文逗号将不同数值分割。例如：<br />
        <i>100,200,100</i> <br />
        表示先运行100ms、然后运行200ms、最后运行100ms。 <br />
        <h3>amplitudes（振幅）：</h3>表示时序与振幅组合中的振幅，影响振动时的振动强度，取值范围0 - 255之间的整数，为0时表示关闭马达，使用英文逗号将不同数值分割。例如：<br />
        <i>255,0,255</i> <br />
        表示先以255振幅运行、然后停止、最后又以255振幅运行。 <br />
        <h3>repeat（重复）：</h3>表示重复时序与振幅组合的位置，取值范围-1 - 上述组合的长度，为-1时表示不重复。<br />
        一个完整的示例如下：<br />
        timings：<i>100,200,100</i> <br />
        amplitudes：<i>255,0,255</i> <br />
        repeat：<i>0</i> <br />
        以上示例表示：0：以255振幅振动100ms；1:之后停止200ms；2:又以255振幅振动100ms。然后从序号0开始重复以上组合。<br />
        <b>注意：</b>
        1.时序和振幅必须一一对应！<br />
        2.安卓8.0以下不支持控制振幅！（即振幅只支持0（启动马达）和非0（停止马达））<br />
        3.某些定制UI（例如MIUI），会禁止持续性的相同震动，如果是相同参数的震动，无论设置持续时间为多久，都只会持续3s左右，与本app无关。<br />
        ]]>
    </string>
    <string name="advanced_dialog_help_content_about">
        <![CDATA[
        其实该项目早在去年就已经有想法并且开始着手制作，但是当时预想的并不是振动测试，而是妄图通过振动马达播放音乐。很显然，失败了，于是就有了这个“嗡嗡嗡”测试app。<br />
        但是或许这并不是痴心妄想，因为我之所以会产生这种想法完全源于我的三星s10就支持设置不同的振动模式，而不同的模式就是不同的旋律！这至少说明原则上是可以实现的。<br />
        不过我苦思冥想许久，翻阅了大量资料，查看了大量源码，始终无法找到解决方案。如果有大佬恰巧对此有所看法，欢迎来此贴和我讨论：<a href="https://v2ex.com/t/645640">有没有可能在软件层面实现安卓手机使用线性马达播放音乐？</a><br />
        另外，我的另一款正经app也欢迎大家试用：<a href="https://www.coolapk.com/apk/153839">隐云图解制作-更方便的视频截图与台词拼接</a><br />
        ]]>
    </string>
    <string name="advanced_dialog_help_content_update" translatable="false">
        <![CDATA[
        <h3>1.34</h3>
        *新增图形化创建震动序列支持添加无振动（振幅为 0）<br />
        *优化图形化创建震动序列<br />

        <h3>1.33</h3>
        *新增图形化创建震动序列（某些定制UI，例如MIUI，会禁止持续性的相同震动，如果是相同参数的震动，无论设置持续时间为多久，都只会持续3s左右，与本app无关。）<br />

        <h3>1.32</h3>
        *新增自定义系统预设（感谢 @紫红小番薯 的建议）<br />
        *修复主页点击振动后滑动提示未隐藏的问题<br />

        <h3>1.31</h3>
        *新增预设：投币（数据来自 @fairyex）<br />
        *首页增加上滑提示<br />
        *支持英文<br />

        <h3>1.3</h3>
        *新增简单振动（默认主界面），上滑即可开启“更多”<br />
        *新增马达检查方法（感谢 @胜利文绉绉 的方法）<br />
        *修复开启后台振动未记录的问题<br />

        <h3>1.2</h3>
        *添加是否后台振动的选项<br />
        *优化自由创作模式<br />
        &nbsp;&nbsp;&nbsp;-加强输入内容检查<br />
        &nbsp;&nbsp;&nbsp;-支持保存、分享创作内容<br />

        <h3>1.1</h3>
        *提高兼容性<br />
        &nbsp;&nbsp;&nbsp;-UI兼容低dpi手机 <br />
        &nbsp;&nbsp;&nbsp;-api兼容至17（安卓4.2） <br />
        *优化UI <br />
        &nbsp;&nbsp;&nbsp;-优化使用说明Dialog布局 <br />
        &nbsp;&nbsp;&nbsp;-优化FAB位置 <br />
        &nbsp;&nbsp;&nbsp;-优化按钮位置 <br />
        *修复退出软件后振动未停止 <br />

        <h3>1.0</h3>
        *初始版本<br />
        ]]>
    </string>
    <string name="advanced_dialog_tab_summary">简介</string>
    <string name="advanced_dialog_tab_usage">用法</string>
    <string name="advanced_dialog_tab_about">关于</string>
    <string name="advanced_dialog_tab_update">更新</string>
    <string name="advanced_menu_btn_diy_run">运行</string>
    <string name="advanced_menu_btn_diy_save">保存</string>
    <string name="advanced_menu_btn_diy_open">打开</string>
    <string name="advanced_menu_btn_diy_share">分享</string>
    <string name="advanced_menu_btn_diy_visualization">图形</string>
    <string name="advanced_menu_btn_diy_import">导入</string>
    <string name="advanced_action_run_background">后台振动</string>
    <string name="advanced_action_customize_system_default">自定义系统预设</string>
    <string name="advanced_btn_pre_wait">敬请期待</string>
    <string name="advanced_edit_diy_tip_text_empty">字段不能为空</string>
    <string name="advanced_fab_description">帮助</string>
    <string name="advanced_fab_help_title">使用说明</string>
    <string name="advanced_fab_help_btn_close">关闭</string>
    <string name="advanced_diy_open_choise_title">选择文件</string>
    <string name="advanced_diy_open_choise_btn_close">关闭</string>
    <string name="advanced_edit_diy_tip_number_error">错误的数字格式</string>
    <string name="advanced_diy_check_timings_less_zero">时序不能小于0</string>
    <string name="advanced_diy_check_amplitude_number_error">振幅范围0&#8211;255</string>
    <string name="advanced_diy_check_amp_bigThan_tim">振幅数量大于时序数量</string>
    <string name="advanced_diy_check_tim_bigThan_amp">时序数量大于振幅数量</string>
    <string name="advanced_diy_check_reapeat_outOfIndex">重复索引超出序列</string>
    <string name="advanced_diy_check_repeat_wrong_index">错误的索引</string>
    <string name="advanced_diy_save_fileName_title">输入文件名</string>
    <string name="advanced_diy_save_fileName_btn_sure">确定</string>
    <string name="advanced_diy_save_fileName_isEmpty">文件名不能为空</string>
    <string name="advanced_diy_save_success">保存成功</string>
    <string name="advanced_diy_import_dialog_title">输入数据</string>
    <string name="advanced_diy_import_dialog_btn_sure">确定</string>
    <string name="advanced_diy_import_text_isEmpty">数据不能为空</string>
    <string name="advanced_diy_import_fail">导入失败！</string>
    <string name="advanced_diy_start_fail">创建振动失败：%1$s</string>

    <string name="visualization_sideBar_text_strong">强</string>
    <string name="visualization_sideBar_text_weak">弱</string>
    <string name="visualization_btn_save">保存</string>
    <string name="visualization_btn_back">返回</string>
    <string name="visualization_text_time">00:00</string>
    <string name="visualization_text_default_amplitude">0</string>
    <string name="visualization_text_time_sec">%.3f s</string>
    <string name="visualization_text_amplitude">%1$d</string>



    <string name="main_text_click_start">点击以开始振动</string>
    <string name="main_text_click_stop">点击以停止振动</string>
    <string name="main_text_slip_tip">滑动开启“更多”</string>
    <string name="main_action_run_background">后台运行</string>


    <string-array name="advanced_spinner_pre">
        <item>心跳</item>
        <item>鼓点</item>
        <item>摇滚</item>
        <item>投币</item>
        <item>敬请期待&#8230;</item>
    </string-array>

    <string-array name="advanced_diy_more_menu">
        <item>图形</item>
        <item>保存</item>
        <item>打开</item>
        <item>导入</item>
        <item>分享</item>
    </string-array>
</resources>
