<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisualizationActivity">

    <RelativeLayout
        android:id="@+id/visualization_side_bar"
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/visualization_side_bar_marginStart"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_visualization_side_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/visualization_side_bar_marginStart"
            android:layout_marginTop="4dp"
            android:text="@string/visualization_sideBar_text_strong"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/visualization_side_bar_marginStart"
            android:layout_marginBottom="4dp"
            android:text="@string/visualization_sideBar_text_weak"
            android:textColor="@color/colorPrimaryDark" />
    </RelativeLayout>

    <com.equationl.motortest.view.MyTouchView
        android:id="@+id/visualization_touchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/visualization_bottom_bar"
        app:layout_constraintStart_toEndOf="@+id/visualization_side_bar" />

    <LinearLayout
        android:id="@+id/visualization_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visualization_side_bar">

        <Button
            android:id="@+id/visualization_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/visualization_btn_back" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/visualization_text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualization_text_time" />

            <TextView
                android:id="@+id/visualization_text_amplitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal"
                android:text="@string/visualization_text_default_amplitude" />

        </LinearLayout>
        <Button
            android:id="@+id/visualization_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visualization_btn_save" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>